# comis

./: .gitattributes  .gitignore  README.md  pyproject.toml
comis/: checks.py  main.py
comis/filters/: author.py  karma.py  time.py
comis/utils/: __init__.py
docs/: conf.py  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/api/: comis.doctree  filters.doctree  index.doctree  utils.doctree
docs/_build/doctrees/examples/: index.doctree
docs/_build/doctrees/usage/: index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/api/: comis.rst.txt
docs/_build/html/_sources/usage/: index.rst.txt
docs/_build/html/api/: comis.html  filters.html  index.html  utils.html
docs/_build/html/examples/: index.html
docs/_build/html/usage/: index.html
docs/api/: filters.rst  index.rst  utils.rst
docs/examples/: auto_comment.py  bad_word_filter.py  index.rst  monday.py
docs/usage/: index.rst
