[tool.poetry]
name = "comis"
version = "0.1.0"
description = "comis, the simplest way to create a reddit bot"
authors = ["Endercheif"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
asyncpraw = "^7.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.941"
black = "^22.3.0"
isort = "^5.10.1"
python-dotenv = "^0.20.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"